Fix warning color contrast on the side...

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -23,7 +23,7 @@ html {
   --color-sub-2: #A4A4A9;
   --color-sub-3: #E1E1E7;
   --color-green: #207F35;
-  --color-red: #D20015;
+  --color-red: rgb(255,59,48);
   --color-vonesco: #FF6228;
   --color-vonesco-sub: #FF7442;
   --color-vonesco-sub-2: #FFA786;
@@ -59,7 +59,7 @@ html {
   --color-sub-2: #3F3F41;
   --color-sub-3: #3F3F41;
   --color-green: #000100;
-  --color-red: #D20015;
+  --color-red: rgb(255,59,48);
   --color-vonesco: #FFA786;
   --color-vonesco-sub: #FF7442;
   --color-vonesco-sub-2: #FF6228;
@@ -95,7 +95,7 @@ html {
     --color-sub-2: #3F3F41;
     --color-sub-3: #3F3F41;
     --color-green: #000100;
-    --color-red: #D20015;
+    --color-red: rgb(255,59,48);
     --color-vonesco: #FFA786;
     --color-vonesco-sub: #FF7442;
     --color-vonesco-sub-2: #FF6228;
